WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48254
cancelledError for WebKit2 on windows should use kCFErrorDomainCFNetwork instead of webKitErrorDomain
https://bugs.webkit.org/show_bug.cgi?id=48254
Summary
cancelledError for WebKit2 on windows should use kCFErrorDomainCFNetwork inst...
Sam Weinig
Reported
2010-10-25 11:38:10 PDT
cancelledError for WebKit2 on windows should use kCFErrorDomainCFNetwork instead of webKitErrorDomain
Attachments
Patch
(1.67 KB, patch)
2010-10-25 11:39 PDT
,
Sam Weinig
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2010-10-25 11:39:45 PDT
Created
attachment 71777
[details]
Patch
Sam Weinig
Comment 2
2010-10-25 11:41:39 PDT
Fixed in
r70467
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug