cancelledError for WebKit2 on windows should use kCFErrorDomainCFNetwork instead of webKitErrorDomain https://bugs.webkit.org/show_bug.cgi?id=48254

Reviewed by Dan Bernstein.

* WebProcess/WebCoreSupport/win/WebErrorsWin.cpp:
(WebKit::cancelledError): Use kCFErrorDomainCFNetwork instead of webKitErrorDomain and switch over
to using kCFURLErrorCancelled instead of a hard coded constant.



git-svn-id: svn://svn.chromium.org/blink/trunk@70467 bbb929c8-8fbe-4397-9dbb-9b2b20218538