third_party/WebKit/WebKit2/WebProcess/WebCoreSupport/win/WebErrorsWin.cpp
@@ -28,6 +28,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "WKError.h"
 #include "WebError.h"
+#include <CFNetwork/CFNetworkErrors.h>
 #include <WebCore/ResourceRequest.h>
 #include <WebCore/ResourceResponse.h>
 
@@ -35,13 +36,9 @@ using namespace WebCore;
 
 namespace WebKit {
 
-enum {
-    WebURLErrorCancelled =                       -999,
-};
-
 ResourceError cancelledError(const ResourceRequest& request)
 {
-    return ResourceError(WebError::webKitErrorDomain(), WebURLErrorCancelled, request.url().string(), String());
+    return ResourceError(kCFErrorDomainCFNetwork, kCFURLErrorCancelled, request.url().string(), String());
 }
 
 ResourceError blockedError(const ResourceRequest& request)
